# claude_automation

./: README.md  agents.py  config.py  hello_claude.py  main.py  pipeline.py  pyproject.toml  reporting.py  requirements.txt  ruff.toml  task_parser.py  worktree.py
.claude/skills/create-task/: SKILL.md
claude_automation/: agents.py  config.py  hello_claude.py  main.py  pipeline.py  reporting.py  task_parser.py  worktree.py
tasks/: CALC-0001.md  CALC-0002.md  CALC-0003.md  CALC-0004.md
tasks_done/: CALC-0001.md
tests/: test_agents.py  test_config.py  test_integration.py  test_pipeline.py  test_reporting.py  test_task_parser.py  test_worktree.py
