[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-automation"
version = "0.1.6"
description = "Autonomous pipeline for running Claude Code agents overnight"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.14.11",
]

[project.scripts]
claude-automation = "claude_automation.main:main"
hello-claude = "claude_automation.hello_claude:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
